# URC

./: .gitignore  .gitmodules  README.md  obstacle_detection.code-workspace
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: research-topic.md
19v_draft/: 19V draft.kicad_pcb  19V draft.kicad_prl  19V draft.kicad_pro  19V draft.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table
Autonomous_Project/: autonomous_proj.md
basestation/: Cargo.toml  go.mod  go.sum  main.go  readme.md
basestation/.devcontainer/: devcontainer.json
basestation/basestation/: go.mod  go.sum  main.go  webrtc.go
basestation/basestation/ui/: .eslintrc.cjs
basestation/basestation/video_stream/: webrtc.go
basestation/fake-rover/: Cargo.toml  rover.py
basestation/fake-rover/src/: main.rs
basestation/rover-msgs/: Cargo.toml  build.rs  build.sh
basestation/rover-msgs/bindings/: IMU.ts  Message.ts  Quaternion.ts  Twist.ts  Vector3.ts
basestation/rover-msgs/protos/: geometry_msgs.proto  msgs.proto  std_msgs.proto
basestation/rover-msgs/python/: msgs_pb2.py
basestation/rover-msgs/src/: lib.rs  msgs.proto
basestation/rover-ui/: Cargo.toml  build.rs  docker-compose.yml  stream.sdp
basestation/rover-ui/src/: main.rs
basestation/rover-ui/src/data/: mod.rs  rover.rs  rtp_data.rs
basestation/rover-ui/ui/: LICENSE  astro.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
basestation/rover-ui/ui/src/: index.css
basestation/rover-ui/ui/src/components/: Controller.tsx  Header.astro  IMUDisplay.tsx  Map.tsx  Telemetry.tsx  VideoStream.tsx  site-header.tsx  theme-toggle.tsx
basestation/rover-ui/ui/src/config/: site.ts
basestation/rover-ui/ui/src/layouts/: Layout.astro
basestation/rover-ui/ui/src/lib/: types.ts
basestation/rover-ui/ui/src/pages/: HomePage.tsx  index.astro
basestation/rover-ui/ui/src/types/: binding.ts
basestation/rover-ui/video-data/: rgb-data3.ts  rgb-data9.ts
basestation/serial/: serial.go
basestation/ui/: README.md  package.json  pnpm-lock.yaml  vite.config.ts
basestation/ui/src/: App.tsx
basestation/video_stream/: webrtc.go
pcbs/MotorController/: MotorController.kicad_pro  motor_controller.kicad_pcb  motor_controller.kicad_prl  motor_controller.kicad_pro  motor_controller.kicad_sch
pcbs/MotorController/motor_controller/: fp-info-cache  fp-lib-table  sym-lib-table
radiodriver-proxy/: .gitignore  README.md  proxy.py
ros2-overview/: readme.md
rover-embedded/ArmDriver/: platformio.ini
rover-embedded/ArmDriver/src/: main.cpp
rover-embedded/IMU Node/: platformio.ini
rover-embedded/IMU Node/src/: main.cpp
rover-embedded/IndicatorLight/: platformio.ini
rover-embedded/IndicatorLight/src/: main.cpp
rover-embedded/Stepper/: platformio.ini
rover-embedded/Stepper/src/: main.cpp
rover-embedded/drivetrain-controller/: platformio.ini  readme.md
rover-embedded/drivetrain-controller/src/: main.cpp  motor.cpp  motor.h  teensy4_usb_descriptor.c
rover-embedded/light controller/: platformio.ini
rover-embedded/light controller/src/: main.cpp
rover-ros/: flake.nix  install_deps.sh  readme.md
rover-ros/.cargo/: config.toml
rover-ros/install/: setup.sh
rover-ros/launch/: rover.py
rover-ros/src/action_drivetrain_interface/: CMakeLists.txt
rover-ros/src/aruco_chase/: setup.cfg  setup.py
rover-ros/src/drivetrain/: package.xml
rover-ros/src/drivetrain_test/: package.xml  setup.cfg  setup.py
rover-ros/src/obstacle_detection/: package.xml  setup.py
rover-ros/src/realsense-ros/: NOTICE.md  README.md
rover-ui/: Cargo.toml  flake.nix  package-lock.json  server.py
rover-ui/fake-rover/: Cargo.toml
rover-ui/fake-rover/src/: main.rs
rover-ui/rover-msgs/src/: lib.rs
rover-ui/rtp-forward/: Cargo.toml  session
rover-ui/rtp-forward/src/: main.rs  signal.rs
rover-ui/src/: main.rs
rover-ui/src/data/: mock_data.rs  mod.rs  ros_data.rs  rover.rs  rtp_data.rs  signal.rs
rover-ui/ui/: package-lock.json  package.json  pnpm-lock.yaml
rover-ui/ui/src/components/: HLSVideo.tsx  VideoStream.tsx  WebSocketVideo.tsx  WebSocketVideoA.tsx
rover-ui/ui/src/layouts/: Layout.astro
rover-ui/ui/src/pages/: index.astro
rover-ui/video-data/: rgb-data.m3u8  rgb-data0.ts  rgb-data1.ts  rgb-data2.ts  rgb-data4.ts  rgb-data5.ts  rgb-data6.ts  rgb-data7.ts  rgb-data8.ts
rover/install/: local_setup.sh
rover/log/: latest_build
rover/src/depth_image_viewer/: setup.cfg  setup.py
simulation/: rover-test.sdf  rover.sdf
srp_sim/: README.md
srp_sim/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
srp_sim/log/: latest_build
srp_sim/scripts/: clean.sh
srp_sim/src/sim_package/: CMakeLists.txt  package.xml
srp_sim/src/sim_package/config/: ros_gz_bridge.yaml
srp_sim/src/sim_package/include/sim_package/: BasicSystem.hh
srp_sim/src/sim_package/launch/: aruco_marker_launch.launch.py  world.launch.py
srp_sim/src/sim_package/models/4x4_50-5/: aruco_marker.xacro  model-1_4.sdf  model.config  model.sdf
srp_sim/src/sim_package/models/4x4_50-5/marker0/: model-1_4.sdf  model.sdf
srp_sim/src/sim_package/models/4x4_50-5/marker0/meshes/: Marker0.dae
srp_sim/src/sim_package/models/falling_rock1/: model.sdf
srp_sim/src/sim_package/models/mars/: model.config
srp_sim/src/sim_package/models/rover/: model.config  model.sdf  model.urdf  model.xacro
srp_sim/src/sim_package/src/: BasicSystem.cc
srp_sim/src/sim_package/worlds/: test.world  world.sdf  world2.sdf
wiring_harness/: 24v_harness.yml
ws_urc/: readme.md  stream.sdp
ws_urc/.cargo/: config.toml
ws_urc/config/: cmd_vel.yaml  nav2_params.yaml
ws_urc/launch/: navigation.py  rover.py
ws_urc/scripts/: install_ros2.sh
ws_urc/src/.devcontainer/: Dockerfile  devcontainer.json
ws_urc/src/action_drivetrain_interface/: CMakeLists.txt  package.xml
ws_urc/src/aruco_chase/: package.xml
ws_urc/src/basestation/: Cargo.toml  generate_binding.sh  package.xml  setup.cfg  setup.py
ws_urc/src/basestation/basestation/: basestation_node.py  msgs_pb2.py
ws_urc/src/basestation/src/: main.rs  msgs.rs
(+127 files in other folders)
