[package]
name = "rover-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
serde = { version= "1.0.210",features=["derive"] }
serde_json = "1.0"


r2r = { version = "0.9.0", optional = true }  # ROS2 crate, only needed for real data
opencv = { version="0.92.3",optional=true }
actix-files = "0.6.6"

[features]
real = ["r2r","opencv"]  # Feature to enable real ROS2 data, pulling in the r2r dependency
mock = []
default = ["mock"]  # Set the default feature to mock

