[package]
name = "rover-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
serde = { version= "1.0.210",features=["derive"] }
serde_json = "1.0"
actix-files = "0.6.6"
futures-util = { version = "0.3.30" }
chrono = "0.4.38"
tokio = { version = "1.40.0", features = ["full"] }
actix-ws = "0.3.0"
webrtc = "0.11.0"
anyhow = "1.0.92"
base64 = "0.22.1"
bincode = { version = "=2.0.0-rc.3" }
rover-msgs = { path = "../rover-msgs" }
rand = "0.8.5"
ctrlc = "3.4.5"
prost = "0.13.4"
prost-stream = { version = "0.1.2", features = ["async"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing = "0.1.41"
[features]
real = []  # Feature to enable real ROS2 data, pulling in the r2r dependency
default = ["real"]  # Set the default feature to mock

